--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
                 <p>⚠️ You can't actually slide this! ⚠️</p>
                 <p>Only the randomize button works (terribly)</p>
             </div>
-            <audio id="background-music" loop>
-                <source src="music/F_CK SWAG.mp3" type="audio/mpeg">
+            <audio id="background-music" loop preload="auto">
+                <source src="https://www.soundjay.com/misc/sounds/bell-ringing-05.wav" type="audio/wav">
+                <source src="https://www.soundjay.com/misc/sounds/bell-ringing-05.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
             <button id="play-music-btn" class="play-btn">🎵 Play Music 🎵</button>
