Use F_CK SWAG MP3 as primary music source and fix HTML typo

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             </div>
             <div class="fake-slider">
                 <div class="slider-track"></div>
+                
                 <div class="slider-thumb" id="slider-thumb"></div>
             </div>
             <button id="randomize-btn" class="randomize-btn">🎲 Randomize Volume! 🎲</button>
@@ -29,8 +30,8 @@
                 <p>Only the randomize button works (terribly)</p>
             </div>
             <audio id="background-music" loop preload="auto">
+                <source src="Music/F_CK SWAG.mp3" type="audio/mpeg">
                 <source src="https://www.soundjay.com/misc/sounds/bell-ringing-05.wav" type="audio/wav">
-                <source src="https://www.soundjay.com/misc/sounds/bell-ringing-05.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
             <button id="play-music-btn" class="play-btn">🎵 Play Music 🎵</button>
